@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gentoo.config-0.9.7g 3356 RMD160 8e83cecd44f2dc6b0863bf10b920cae2490250d7 SHA1 9dc82ecc34677b9b9f2758d3c86ae5a8b4d86720 SHA256 1935ea31cf0d4c4a7f5ed0fa4434e9960c7ccef5cb43abcee26cff09472991eb
 MD5 5479124566140e079c2493abe59a1c90 files/gentoo.config-0.9.7g 3356
 RMD160 8e83cecd44f2dc6b0863bf10b920cae2490250d7 files/gentoo.config-0.9.7g 3356
@@ -84,10 +87,10 @@ EBUILD openssl-0.9.7k.ebuild 5402 RMD160 89fd43fb8bc64f345483c21b14690b5f7cbdcae
 MD5 1fdb5bbcd56f2780f574e907be69fb91 openssl-0.9.7k.ebuild 5402
 RMD160 89fd43fb8bc64f345483c21b14690b5f7cbdcae6 openssl-0.9.7k.ebuild 5402
 SHA256 9d19a2b0f8b3c1e7637639b77780abc7939c2fdae6c9ec0864e5ee8df8cd49bb openssl-0.9.7k.ebuild 5402
-EBUILD openssl-0.9.7l.ebuild 5409 RMD160 87382c4758376c701ccc0169567d4e95c85f73c2 SHA1 bddedcb3d9e9885aa5ed665978ee6eac80416480 SHA256 608518636dc2f7f9031b5b59d821036695da935b2d17dec6f5f09bc741acbf38
-MD5 273d1d9bd157579051d0156b6e6503f4 openssl-0.9.7l.ebuild 5409
-RMD160 87382c4758376c701ccc0169567d4e95c85f73c2 openssl-0.9.7l.ebuild 5409
-SHA256 608518636dc2f7f9031b5b59d821036695da935b2d17dec6f5f09bc741acbf38 openssl-0.9.7l.ebuild 5409
+EBUILD openssl-0.9.7l.ebuild 5411 RMD160 7f5f0aa0d530574908ef8e7cb07a58a9909528bb SHA1 5dd09a9d7e0c7da75ce5423a3562f684a3541e6b SHA256 bfb60fb521d198fe4e2a45995603c586280f3f9be5e74bf487ba2494cb00b4f5
+MD5 f1da337e565f7087e919c9c51110762a openssl-0.9.7l.ebuild 5411
+RMD160 7f5f0aa0d530574908ef8e7cb07a58a9909528bb openssl-0.9.7l.ebuild 5411
+SHA256 bfb60fb521d198fe4e2a45995603c586280f3f9be5e74bf487ba2494cb00b4f5 openssl-0.9.7l.ebuild 5411
 EBUILD openssl-0.9.8b.ebuild 4997 RMD160 6900925606a9c21f3ae136fd400e2cc6961be378 SHA1 b7fcdd25e5a7a46d0897771e0cef19689ebf229b SHA256 c6172cdb7c1ad3728ac08c2474004c824a635ba9151a71751cd36dae8c53c1fd
 MD5 4b67c1cdcfc7fe43341536e549eb8db9 openssl-0.9.8b.ebuild 4997
 RMD160 6900925606a9c21f3ae136fd400e2cc6961be378 openssl-0.9.8b.ebuild 4997
@@ -96,14 +99,14 @@ EBUILD openssl-0.9.8c-r2.ebuild 5516 RMD160 611d53a1ba338a78a10a56aeec0a046c16f8
 MD5 4d09331c22c10fbfa527a17b040a6e08 openssl-0.9.8c-r2.ebuild 5516
 RMD160 611d53a1ba338a78a10a56aeec0a046c16f839d4 openssl-0.9.8c-r2.ebuild 5516
 SHA256 69c69ec5ca42dfebb55ef24a9df610f4b2637a0c9a43036896e2f714fd944396 openssl-0.9.8c-r2.ebuild 5516
-EBUILD openssl-0.9.8d.ebuild 5519 RMD160 f0d5c556ffc32a90105e6529f382f5a0cf954baa SHA1 5fb01441d33779a13e722205c52492e70bc30ea6 SHA256 cff3f76bded0699f233283f18602c023f024bd2e5bb77070e54d6c44c9759504
-MD5 c7e9bd6f990fb44744a4bb905fbe96bb openssl-0.9.8d.ebuild 5519
-RMD160 f0d5c556ffc32a90105e6529f382f5a0cf954baa openssl-0.9.8d.ebuild 5519
-SHA256 cff3f76bded0699f233283f18602c023f024bd2e5bb77070e54d6c44c9759504 openssl-0.9.8d.ebuild 5519
-MISC ChangeLog 30677 RMD160 46f2922946fd447c6e07a0ed1ac83ab005531f59 SHA1 59428777c4a098d5c9fd0db2148609543d927179 SHA256 9ba922ec85bc797f391e94074fb5f58933fec68a3214ccbd45d244487916c05e
-MD5 9e6de53b7179459f424d4bc2ffbffa60 ChangeLog 30677
-RMD160 46f2922946fd447c6e07a0ed1ac83ab005531f59 ChangeLog 30677
-SHA256 9ba922ec85bc797f391e94074fb5f58933fec68a3214ccbd45d244487916c05e ChangeLog 30677
+EBUILD openssl-0.9.8d.ebuild 5521 RMD160 457ce2350ee4dfa2be91e41bf9d36d0319ca1436 SHA1 afc7ecc3cf0affcbbb236947390f81605e541bec SHA256 166aaeee57b763dc1312ba0945036641c90b89cc0360363244e563e756882772
+MD5 ef881121ad966f138a73fc0f4686e131 openssl-0.9.8d.ebuild 5521
+RMD160 457ce2350ee4dfa2be91e41bf9d36d0319ca1436 openssl-0.9.8d.ebuild 5521
+SHA256 166aaeee57b763dc1312ba0945036641c90b89cc0360363244e563e756882772 openssl-0.9.8d.ebuild 5521
+MISC ChangeLog 30821 RMD160 b853ec0fe8001b1dd896c40bb14d31677ed48962 SHA1 4c47666bda00f760c7d1dcc8a1be95c235ded758 SHA256 4234b5cdcddeb02edf7b6f052d195c2db9d556a5da1f8a8d0ea7f2be33c66d2e
+MD5 b1087468d5dc930b2897a1cd6a46d33f ChangeLog 30821
+RMD160 b853ec0fe8001b1dd896c40bb14d31677ed48962 ChangeLog 30821
+SHA256 4234b5cdcddeb02edf7b6f052d195c2db9d556a5da1f8a8d0ea7f2be33c66d2e ChangeLog 30821
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -126,3 +129,10 @@ SHA256 fdcfdfe6232573573e817138ff76277a9161c65fc21fe52b77dfb9a2a1fc863a files/di
 MD5 c860eede8676360f4cd66b1fcb17345c files/digest-openssl-0.9.8d 247
 RMD160 fc03af9cd4ca71ec400924bfd866e09b0a8d59a7 files/digest-openssl-0.9.8d 247
 SHA256 f71ab1e8bddbc1f5dfcfafba984d0c2c95088b751768ff691f5fcc911be601a8 files/digest-openssl-0.9.8d 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
+
+iD8DBQFFHEWhKRy60XGEcJIRAvd2AJ9sF+zBenwaTd3KFV7d8bxM9S2nxgCgh37r
+RO2XIX2Kpb5Nu+qczxb6mmA=
+=zDhz
+-----END PGP SIGNATURE-----
